[package]
name = "ttybox"
version = "0.1.0"
edition = "2021"
authors = ["Ihor Kalnytskyi <ihor@kalnytskyi.com>"]
description = "TTYbox is a software suite that provides a collection of TTY tools in a single executable file."
readme = "README.md"
documentation = "https://github.com/ikalnytskyi/ttybox"
homepage = "https://github.com/ikalnytskyi/ttybox"
repository = "https://github.com/ikalnytskyi/ttybox"
license = "MIT"
keywords = ["tty", "terminal", "clipboard"] 
categories = ["command-line-utilities"] 

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.8", features = ["derive"] }
libc = "0.2.140"
mio = { version = "0.8.6", features = ["os-ext", "os-poll"] }
ncurses = "5.101.0"
